fixed Project Title divs that were floating above the footer with z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ ul:nth-of-type(1) li:nth-of-type(3) {
 
 #b1 {
     position: absolute;
-    width: 160px;
+    width: 200px;
     height: 16px;
     top: 140px;
     left: 10px;
@@ -97,7 +97,7 @@ ul:nth-of-type(1) li:nth-of-type(3) {
 
 #b2 {
     position: absolute;
-    width: 160px;
+    width: 200px;
     height: 16px;
     top: 140px;
     left: 10px;
@@ -109,7 +109,7 @@ ul:nth-of-type(1) li:nth-of-type(3) {
 
 #b3 {
     position: absolute;
-    width: 160px;
+    width: 200px;
     height: 16px;
     top: -82px;
     left: 234px;
@@ -121,7 +121,7 @@ ul:nth-of-type(1) li:nth-of-type(3) {
 
 #b4 {
     position: absolute;
-    width: 160px;
+    width: 200px;
     height: 16px;
     top: -82px;
     left: 458px;
@@ -133,7 +133,7 @@ ul:nth-of-type(1) li:nth-of-type(3) {
 
 #b5 {
     position: absolute;
-    width: 160px;
+    width: 200px;
     height: 16px;
     top: -82px;
     left: 683px;
@@ -204,10 +204,10 @@ footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 50px;
     background-color: #666666;
     text-align: center;
     border-top: 8px solid #4aaaa5;
+    z-index: 2;
 }
 
 #footer-style {
@@ -216,5 +216,7 @@ footer {
     clear: left;
     flex-shrink: 0;
 }
+
+
 
 /***************** Portfolio Gallery Grid Styles ********/
